--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next-http-middleware": "^3.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "node-postgres": "^0.6.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
