--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,19 +1,21 @@
-# docker-compose.yml
 version: '3'
 services:
   postgres:
-    image: postgres:13
+    image: quakeworld_records_postgres_image
     container_name: quakeworld_records_postgres
     environment:
      - POSTGRES_USER=${QUAKEWORLD_RECORDS_POSTGRES_USER}
      - POSTGRES_PASSWORD=${QUAKEWORLD_RECORDS_POSTGRES_PASSWORD}
-    volumes:
-      - quakeworld_records_data:/var/lib/postgresql/data/ # persist data even if container shuts down
+     - POSTGRES_QUAKEWORLD_RECORDS_USER=${POSTGRES_QUAKEWORLD_RECORDS_USER}
+     - POSTGRES_QUAKEWORLD_RECORDS_USER_PASSWORD=${POSTGRES_QUAKEWORLD_RECORDS_USER_PASSWORD}
+     - POSTGRES_QUAKEWORLD_RECORDS_DATABASE_NAME=${POSTGRES_QUAKEWORLD_RECORDS_DATABASE_NAME}
     ports:
       - "5432:5432"
+    volumes:
+      - quakeworld_records_data:/var/lib/postgresql/data/
     networks:
       - quakeworld_records_network
-volumes:
-  quakeworld_records_data: # named volumes can be managed easier using docker-compose
 networks:
   quakeworld_records_network:
+volumes:
+  quakeworld_records_data:
