--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.1.1",
     "i18next": "^19.8.1",
+    "i18next-fs-backend": "^1.0.7",
     "i18next-http-middleware": "^3.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
