-Added db-migrate to handle schema migrations

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "config": "^3.3.2",
+    "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.1.1",
