--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/miltonizer/quakeworld_records_backend#readme",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "argon2": "^0.27.0",
     "config": "^3.3.2",
     "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
