--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --watchAll",
+    "start": "node index.js",
+    "start-dev": "cross-env NODE_ENV=development node index.js",
+    "db-migrate-test-up": "cross-env NODE_ENV=test db-migrate up",
+    "db-migrate-dev-up": "cross-env NODE_ENV=development db-migrate up",
+    "db-migrate-prod-up": "cross-env NODE_ENV=production db-migrate up",
+    "db-migrate-test-down": "cross-env NODE_ENV=test db-migrate down",
+    "db-migrate-dev-down": "cross-env NODE_ENV=development db-migrate down",
+    "db-migrate-prod-down": "cross-env NODE_ENV=production db-migrate down"
   },
   "repository": {
     "type": "git",
@@ -24,6 +32,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.1.1",
+    "http-status-codes": "^2.1.4",
     "i18next": "^19.8.1",
     "i18next-fs-backend": "^1.0.7",
     "i18next-http-middleware": "^3.0.6",
@@ -34,6 +43,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "eslint": "^7.10.0",
     "jest": "^26.4.2",
     "joi": "^17.2.1",
