--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.2.0",
     "helmet": "^4.1.1",
     "http-status-codes": "^2.1.4",
     "i18next": "^19.8.1",
