--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-fileupload": "^1.2.0",
     "helmet": "^4.1.1",
     "http-status-codes": "^2.1.4",
     "i18next": "^19.8.1",
@@ -42,6 +41,7 @@
     "lodash": "^4.17.20",
     "max-listeners-exceeded-warning": "0.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pg": "^8.4.1",
     "winston": "^3.3.3"
   },
